--- a/src/components/AuthNavigation/AuthNavigation.css
+++ b/src/components/AuthNavigation/AuthNavigation.css
@@ -28,6 +28,9 @@
   transition: opacity 0.3s ease;
 }
 
+.auth-navigation__link_type_signin {
+  color: #000;
+}
 .auth-navigation__link:hover {
   opacity: 0.7;
 }
