--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,7 +8,7 @@
   padding: 0 14px;
 }
 
-.header__type_loggin {
+.header_loggin {
   background-color: #fff;
 }
 
@@ -18,6 +18,11 @@
   background-image: url('../../images/logo.svg');
   background-repeat: no-repeat;
   background-size: cover;
+  transition: opacity 0.3s ease;
+}
+
+.header__logo:hover {
+  opacity: 0.7;
 }
 
 @media (min-width: 768px) {
