--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -29,7 +29,7 @@
 }
 
 .search-form__input:focus {
-  outline: none;
+  outline: solid 1px #e8e8e8;
 }
 
 .search-form__bnt {
@@ -98,12 +98,13 @@
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background-color: #fff;
+  background-color: #a0a0a0;
   transition: left 0.4s;
 }
 
 .search-form__checkbox:checked + .search-form__inner::after {
   left: 22px;
+  background-color: #fff;
 }
 
 @media (min-width: 768px) {
